# eva

./: .gitignore  CMakeLists.txt  Makefile  default.nix
examples/: corr.eva
examples/ib/: quote.eva
http/: test.cpp
src/: allocator.cpp  allocator.hpp  bit_trie.hpp  common.hpp  engine.cpp  engine.hpp  primitive.cpp  primitive.hpp  types.cpp  types.hpp
